syntax = "proto3";
import "ProtoUtil.proto";

option java_package = "protos";
option csharp_namespace = "myGrpc";

package Protos;

message gLocation {
  int32 Id = 1;
  string Description = 2;
}

message gLocationList{
  repeated gLocation location = 1;

}

message gLocationId{
  int32 LocationId = 1;

}


service LocationService{
  rpc RegisterLocation(gLocation) returns (gLocation);
  rpc GetLocation(gLocationId) returns (gLocation);
  rpc GetAllLocations(gLocation) returns (gLocationList);
  rpc UpdateLocation(gLocation) returns (gLocation);
  rpc RemoveLocation(gLocationId) returns (gBoolValue);
}
